--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "mqtt": "^5.10.3",
     "react": "^19.0.0",
     "react-audio-player": "^0.17.0",
     "react-chartjs-2": "^5.3.0",
